--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,12 @@
 }
 
 .image {
+    cursor: pointer;
     width: 100%;
     border-radius: 5px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.75);
+}
+
+.image:hover {
+    opacity: 0.7;
 }
